--- a/package.json
+++ b/package.json
@@ -5,21 +5,36 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ./**/*.{tx,tsx}"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.9",
+    "@googlemaps/js-api-loader": "^1.11.1",
+    "@react-native-community/async-storage": "~1.12.0",
+    "dotenv": "^8.2.0",
     "expo": "~40.0.0",
+    "expo-asset": "~8.2.1",
+    "expo-constants": "^9.3.5",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.6",
+    "graphql": "^15.5.0",
+    "node-geometry-library": "^1.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-dropdown-picker": "^4.0.2",
+    "react-native-maps": "0.27.1",
+    "react-native-paper": "^4.7.2",
+    "react-router-native": "^5.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-react": "^7.22.0",
     "typescript": "~4.0.0"
   },
   "private": true
