--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-router-native": "^5.2.0",
+    "react-spring": "^8.0.27",
     "yup": "^0.32.9"
   },
   "devDependencies": {
